[package]
name = "loonggamedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.1"
actix-web = "4"
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.215"
serde_derive = "1.0"
sonic-channel2 = { version = "1.1.2", features = ["ingest", "search"] }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
enumflags2 = "0.7.10"
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
tokio = { version = "1.42.0", features = ["full"] }


log = "*"
env_logger = "0.9"
